--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             <div class="forgot-password">
                 <a href="/recuperar-senha"> Esqueceu sua senha?</a>
             </div>
+
+            <div class="options">
+                <div classe="remember-me">
+                    <input type="checkbox" id="remember" name="remember">
+                    <label for="remember">Lembrar-me</label>
+            </div>
+
+            <button type="submit">Entrar</button>
         </form>        
     </main>
 </body>
