--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
             </div>
 
             <button type="submit">Entrar</button>
-        </form>        
+        </form>
+        
+        <div class="divider">
+            <span>Ou continue com</span>
+        </div>
+
+        <div class="social-login">
+            <a href="#" class="social-btn" aria-label="Entrar com google">Gmail</a>
+            <a href="#" class="social-btn" aria-label="Entrar com facebook">Facebook</a>
+            <a href="#" class="social-btn" aria-label="Entrar com apple">Apple</a>        
+        </div>
+
+        <div class="singup-link">
+            Não tem uma conta? <a href="/cadastro">Criar conta</a>
+        </div>
     </main>
 </body>
 </html>
