--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <div classe="remember-me">
                     <input type="checkbox" id="remember" name="remember">
                     <label for="remember">Lembrar-me</label>
+                </div>
             </div>
 
             <button type="submit">Entrar</button>
