--- a/index.html
+++ b/index.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Pagina de login segura e elegante">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="descripition" content="Pagina de login segura e elegante">
     <meta name="keywords" content="login, acesso, segurança, conta">
     <title>Login | Minha Plataforma</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <main class="login-container">
         <header>
             <h1>Bem-vindo</h1>
             <p class="subtitle">Entre com suas credenciais para acessar</p>
         </header>
+
         <form action="/login" method="POST">
             <div class="form-group">
-                <label for="email"> Email ou Usuário</label>
+                <label for="email">Email ou Usuario</label>
                 <div class="input-group">
-                    <input type="email" id="email" name="email" placeholder="Seu email ou nome de usuário" required autofocus>
+                    <input type="email" id="email" name="email" placeholder="Seu email ou nome de usuario" required
+                        autofocus>
                 </div>
             </div>
 
             <div class="form-group">
-                <label for="password"> Senha</label>
+                <label for="password">Senha</label>
                 <div class="input-group">
                     <input type="password" id="password" name="password" placeholder="Senha" required>
                 </div>
             </div>
 
             <div class="forgot-password">
-                <a href="/recuperar-senha"> Esqueceu sua senha?</a>
+                <a href="/recuperar-senha">Esqueceu sua senha?</a>
             </div>
 
             <div class="options">
-                <div classe="remember-me">
+                <div class="remember-me">
                     <input type="checkbox" id="remember" name="remember">
                     <label for="remember">Lembrar-me</label>
                 </div>
             </div>
 
             <button type="submit">Entrar</button>
+
         </form>
-        
+
         <div class="divider">
             <span>Ou continue com</span>
         </div>
 
         <div class="social-login">
-            <a href="#" class="social-btn" aria-label="Entrar com google">Gmail</a>
-            <a href="#" class="social-btn" aria-label="Entrar com facebook">Facebook</a>
-            <a href="#" class="social-btn" aria-label="Entrar com apple">Apple</a>        
+            <a href="#" class="social-btn" aria-label="Entrar com google">G</a>
+            <a href="#" class="social-btn" aria-label="Entrar com facebook">F</a>
+            <a href="#" class="social-btn" aria-label="Entrar com Apple">A</a>
         </div>
 
         <div class="singup-link">
             Não tem uma conta? <a href="/cadastro">Criar conta</a>
         </div>
+
     </main>
 </body>
+
 </html>
