add png das midias sociais

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </div>
 
         <div class="social-login">
-            <a href="https://accounts.google.com/" class="social-btn" aria-label="Entrar com google">G</a>
-            <a href="https://pt-br.facebook.com/" class="social-btn" aria-label="Entrar com facebook">F</a>
-            <a href="https://beta.icloud.com/mail/" class="social-btn" aria-label="Entrar com Apple">A</a>
+            <a href="https://accounts.google.com/" class="social-btn" aria-label="Entrar com google"><img src="img/gmail.png" alt="gmail"></a>
+            <a href="https://pt-br.facebook.com/" class="social-btn" aria-label="Entrar com facebook"><img src="img/facebook.png" alt="facebook"></a>
+            <a href="https://beta.icloud.com/mail/" class="social-btn" aria-label="Entrar com Apple"><img src="img/apple.png" alt="apple"></a>
         </div>
 
         <div class="singup-link">
